--- a/app/src/main/res/layout/item_public_work_list.xml
+++ b/app/src/main/res/layout/item_public_work_list.xml
@@ -72,8 +72,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_xsmall"
+            android:layout_marginBottom="@dimen/margin_medium"
             android:src="@drawable/ic_check"
             android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView_itemPublicWorkList_sent"
             app:layout_constraintStart_toStartOf="@+id/imageView_itemPublicWorkList_sent"
             app:layout_constraintTop_toBottomOf="@+id/imageView_itemPublicWorkList_sent" />
