Worker to send public work to database fully implemented and functional.

--- a/app/src/main/res/layout/fragment_public_work_send.xml
+++ b/app/src/main/res/layout/fragment_public_work_send.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.fragments.publicwork.fragments.PublicWorkSendFragment">
 
     <TextView
+        android:id="@+id/textView16"
         style="@style/MPAppTheme.Title1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,5 +17,25 @@
         android:text="@string/title_public_work_send"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/materialButton_sendFragment_send"
+        style="@style/MPAppTheme.ButtonSmallBlue"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/height_default"
+        android:layout_marginStart="@dimen/margin_xxlarge"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_marginEnd="@dimen/margin_xxlarge"
+        android:layout_marginBottom="@dimen/margin_xxlarge"
+        android:backgroundTint="@color/buttonValid1"
+        android:text="@string/button_send_data"
+        android:textColor="@color/colorWhite"
+        app:icon="@drawable/ic_sent"
+        app:iconGravity="textStart"
+        app:iconTint="@color/colorWhite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
