--- a/app/src/main/res/layout/fragment_collect_main.xml
+++ b/app/src/main/res/layout/fragment_collect_main.xml
@@ -71,7 +71,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton_collectMainFragment_addPhoto"
             style="@style/MPAppTheme.ButtonBigBlue"
-            android:layout_width="300dp"
+            android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/height_default"
             android:layout_marginBottom="@dimen/margin_default"
             android:backgroundTint="@color/button1"
@@ -85,7 +85,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton_collectMainFragment_addComment"
             style="@style/MPAppTheme.ButtonBigBlue"
-            android:layout_width="300dp"
+            android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/height_default"
             android:layout_marginBottom="@dimen/margin_xxlarge"
             android:backgroundTint="@color/button1"
