--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -19,4 +19,6 @@
     <dimen name="height_default">48dp</dimen>
 
     <dimen name="button_default">40dp</dimen>
+
+    <dimen name="button_width">300dp</dimen>
 </resources>
