--- a/app/src/main/res/layout/fragment_setup_application.xml
+++ b/app/src/main/res/layout/fragment_setup_application.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_main"
-    tools:context=".ui.fragments.setup.SetupApplicationFragment">
+    tools:context=".ui.screens.setup.SetupApplicationFragment">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animation_view"
