--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="transparent">#00000000</color>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#BDBDBD</color>
+    <color name="colorPrimaryDark">#828282</color>
+    <color name="colorAccent">#008577</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorDivider">#BDBDBD</color>
-
-
+    <color name="colorRed">#EB5757</color>
+    <color name="colorGreen">#008577</color>
+    <color name="colorGreenDark">#00574B</color>
     <color name="title1">#828282</color>
     <color name="title2">#333333</color>
 
