--- a/app/src/main/res/layout/item_upload_public_work.xml
+++ b/app/src/main/res/layout/item_upload_public_work.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <import type="android.view.View" />
+
+        <import type="androidx.work.WorkInfo.State" />
+
         <variable
             name="publicWork"
             type="org.mpmg.mpapp.ui.screens.upload.models.PublicWorkUploadUI" />
@@ -12,7 +16,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textView18"
@@ -36,6 +40,7 @@
             android:layout_marginTop="@dimen/margin_large"
             android:layout_marginEnd="@dimen/margin_default"
             android:text="@{String.format(@string/format_progress,publicWork.progress)}"
+            android:visibility="@{publicWork.workState != State.SUCCEEDED ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="24%" />
@@ -61,6 +66,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView20" />
+
+        <ImageView
+            android:layout_width="@dimen/icon_large"
+            android:layout_height="@dimen/icon_large"
+            android:layout_marginEnd="@dimen/margin_xlarge"
+            android:src="@drawable/ic_check"
+            android:visibility="@{publicWork.workState == State.SUCCEEDED ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="@+id/textView18"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView18" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
