--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -21,4 +21,6 @@
     <dimen name="button_default">40dp</dimen>
 
     <dimen name="button_width">300dp</dimen>
+
+    <dimen name="icon_large">26dp</dimen>
 </resources>
