--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -61,9 +61,11 @@
             app:popEnterAnim="@anim/fragment_fade_enter"
             app:popExitAnim="@anim/fragment_fade_exit" />
         <action
-            android:id="@+id/action_collectMainFragment_pop"
+            android:id="@+id/action_collectMainFragment_to_baseFragment"
+            app:destination="@id/baseFragment"
             app:popUpTo="@id/collectMainFragment"
             app:popUpToInclusive="true" />
+
     </fragment>
     <fragment
         android:id="@+id/setupApplicationFragment"
@@ -75,11 +77,11 @@
             app:destination="@id/baseFragment"
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit"
+            app:launchSingleTop="true"
             app:popEnterAnim="@anim/fragment_fade_enter"
             app:popExitAnim="@anim/fragment_fade_exit"
             app:popUpTo="@id/setupApplicationFragment"
-            app:popUpToInclusive="true"
-            app:launchSingleTop="true"/>
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
@@ -108,7 +110,7 @@
         android:id="@+id/photoAddFragment"
         android:name="org.mpmg.mpapp.ui.screens.photo.PhotoAddFragment"
         android:label="fragment_add_photo"
-        tools:layout="@layout/fragment_add_photo" >
+        tools:layout="@layout/fragment_add_photo">
         <action
             android:id="@+id/action_photoAddFragment_pop"
             app:popUpTo="@id/photoAddFragment"
