--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -77,7 +77,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton_mapFragment_refresh"
-            style="@style/MPAppTheme.ButtonBigBlue"
+            style="@style/MPAppTheme.ButtonBig1"
             android:layout_width="@dimen/height_default"
             android:layout_height="@dimen/height_default"
             app:icon="@drawable/ic_refresh"
@@ -87,7 +87,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton_mapFragment_confirm"
-            style="@style/MPAppTheme.ButtonBigBlue"
+            style="@style/MPAppTheme.ButtonBig1"
             android:layout_width="300dp"
             android:layout_height="@dimen/height_default"
             android:layout_marginBottom="@dimen/margin_medium"
@@ -98,7 +98,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton_mapFragment_cancel"
-            style="@style/MPAppTheme.ButtonBigGrey"
+            style="@style/MPAppTheme.ButtonBig2"
             android:layout_width="300dp"
             android:layout_height="@dimen/height_default"
             android:layout_marginBottom="@dimen/margin_xlarge"
