--- a/app/src/main/res/layout/fragment_public_work_list.xml
+++ b/app/src/main/res/layout/fragment_public_work_list.xml
@@ -59,7 +59,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/materialButton_publicWorkListFragment_add"
-                    style="@style/MPAppTheme.ButtonSmallBlue"
+                    style="@style/MPAppTheme.ButtonSmall1"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/button_default"
                     android:layout_marginEnd="@dimen/margin_default"
