--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
     <color name="transparent">#00000000</color>
     <color name="colorPrimary">#BDBDBD</color>
-    <color name="colorPrimaryDark">#828282</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#008577</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorDivider">#BDBDBD</color>
+    <color name="colorGreenMP">#73FF00</color>
     <color name="colorRed">#EB5757</color>
     <color name="colorGreen">#008577</color>
     <color name="colorGreenDark">#00574B</color>
@@ -15,13 +16,24 @@
     <color name="label1">#4F4F4F</color>
 
     <color name="stroke1">#828282</color>
+    <color name="stroke2">#BDBDBD</color>
 
     <color name="buttonFacebookLogin">#3B5998</color>
     <color name="buttonTwitterLogin">#1DA1F2</color>
+
     <color name="button1">#2F80ED</color>
-    <color name="button1Disabled">#33828282</color>
+    <color name="button1Disabled">#BDBDBD</color>
     <color name="button2">#E0E0E0</color>
     <color name="button3">#F2F2F2</color>
+    <color name="button4">#73FF00</color>
+
+    <color name="textButton4">#333333</color>
+    <color name="textButton4Disabled">#E0E0E0</color>
+
+    <color name="circleBackground1">#4F4F4F</color>
+
+    <color name="cardBackground1">#333333</color>
+
     <color name="buttonValid1">#2F80ED</color>
     <color name="buttonInvalid1">#EB5757</color>
 
