--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorGreenMP</item>
 
         <item name="bottomSheetDialogTheme">@style/MPAppTheme.CustomBottomSheetDialog</item>
     </style>
@@ -16,15 +16,15 @@
 
     <style name="MPAppTheme.InputTitle1" parent="TextAppearance.AppCompat">
         <item name="android:textSize">12sp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
-        <item name="android:textColor">@color/label1</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="MPAppTheme.Title1" parent="TextAppearance.AppCompat">
         <item name="android:textSize">20sp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
-        <item name="android:textColor">@color/title2</item>
+        <item name="android:fontFamily">@font/gotham_bold</item>
+        <item name="android:textColor">@color/colorWhite</item>
     </style>
 
     <style name="MPAppTheme.PublicWorkName" parent="TextAppearance.AppCompat">
@@ -55,23 +55,37 @@
         <item name="android:fontFamily">@font/nunito_light</item>
     </style>
 
+    <style name="MPAppTheme.OptionText" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:fontFamily">@font/nunito_semibold</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
+    <style name="MPAppTheme.Text1" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
     <style name="MPAppTheme.EditText1" parent="TextAppearance.AppCompat">
         <item name="android:textSize">16sp</item>
         <item name="android:background">@drawable/background_input</item>
-        <item name="android:fontFamily">@font/nunito_regular</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
+        <item name="android:textColorHint">@color/stroke1</item>
+        <item name="passwordToggleTint">@color/button1</item>
     </style>
 
     <style name="MPAppTheme.EditText2" parent="TextAppearance.AppCompat">
         <item name="android:textSize">16sp</item>
         <item name="android:background">@drawable/background_input2</item>
-        <item name="android:fontFamily">@font/nunito_regular</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
         <item name="android:singleLine">true</item>
     </style>
 
     <style name="MPAppTheme.EditText3" parent="TextAppearance.AppCompat">
         <item name="android:textSize">16sp</item>
         <item name="android:background">@drawable/background_input3</item>
-        <item name="android:fontFamily">@font/nunito_regular</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
         <item name="android:singleLine">true</item>
     </style>
 
@@ -83,32 +97,34 @@
         <item name="android:fontFamily">@font/nunito_bold</item>
     </style>
 
-    <style name="MPAppTheme.ButtonBigBlue" parent="MPAppTheme.ButtonBase">
+    <style name="MPAppTheme.ButtonBig1" parent="MPAppTheme.ButtonBase">
         <item name="borderWidth">0dp</item>
-        <item name="android:backgroundTint">@color/button_primary_blue</item>
+        <item name="android:backgroundTint">@color/button_primary</item>
         <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:textColor">@color/text_button_primary</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
     </style>
 
-    <style name="MPAppTheme.ButtonBigGrey" parent="MPAppTheme.ButtonBase">
+    <style name="MPAppTheme.ButtonBig2" parent="MPAppTheme.ButtonBase">
         <item name="borderWidth">0dp</item>
         <item name="android:textSize">@dimen/font_large</item>
         <item name="android:backgroundTint">@color/button3</item>
     </style>
 
-    <style name="MPAppTheme.ButtonBigWhite" parent="MPAppTheme.ButtonBase">
+    <style name="MPAppTheme.ButtonBig3" parent="MPAppTheme.ButtonBase">
         <item name="borderWidth">0dp</item>
         <item name="android:textSize">@dimen/font_large</item>
         <item name="android:backgroundTint">@color/colorWhite</item>
     </style>
 
-    <style name="MPAppTheme.ButtonSmallBlue" parent="MPAppTheme.ButtonBase">
+    <style name="MPAppTheme.ButtonSmall1" parent="MPAppTheme.ButtonBase">
         <item name="android:textSize">@dimen/font_default</item>
         <item name="android:backgroundTint">@color/button2</item>
         <item name="android:textColor">@color/buttonValid1</item>
         <item name="iconTint">@color/buttonValid1</item>
     </style>
 
-    <style name="MPAppTheme.ButtonSmallRed" parent="MPAppTheme.ButtonBase">
+    <style name="MPAppTheme.ButtonSmall2" parent="MPAppTheme.ButtonBase">
         <item name="android:textSize">@dimen/font_default</item>
         <item name="android:backgroundTint">@color/button2</item>
         <item name="android:textColor">@color/buttonInvalid1</item>
