--- a/app/src/main/res/layout/item_empty_list.xml
+++ b/app/src/main/res/layout/item_empty_list.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@drawable/background_main"
     android:layout_height="match_parent">
 
     <TextView
-        android:fontFamily="@font/nunito_regular"
+        style="@style/MPAppTheme.Title1"
         android:textSize="@dimen/font_xlarge"
         android:gravity="center"
         android:layout_width="300dp"
