--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -29,13 +29,6 @@
             app:exitAnim="@android:anim/fade_out"
             app:popEnterAnim="@android:anim/fade_out"
             app:popExitAnim="@android:anim/fade_in" />
-        <action
-            android:id="@+id/action_baseFragment_to_publicWorkAddFragment"
-            app:destination="@id/publicWorkAddFragment"
-            app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/fragment_fade_exit"
-            app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/fragment_fade_exit" />
     </fragment>
 
     <fragment
@@ -57,8 +50,10 @@
             app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
             app:popExitAnim="@anim/fragment_fade_exit" />
+
         <action
-            android:id="@+id/action_collectMainFragment_pop"
+            android:id="@+id/action_collectMainFragment_to_baseFragment"
+            app:destination="@id/baseFragment"
             app:popUpTo="@id/collectMainFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -121,11 +116,27 @@
             app:popUpTo="@id/mapFragment"
             app:popUpToInclusive="true" />
     </fragment>
+
     <fragment
         android:id="@+id/homeFragment"
         android:name="org.mpmg.mpapp.ui.screens.home.fragments.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_publicWorkAddFragment"
+            app:destination="@id/publicWorkAddFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_baseFragment"
+            app:destination="@id/baseFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_uploadDataFragment"
+            app:destination="@id/uploadDataFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/uploadDataFragment"
+        android:name="org.mpmg.mpapp.ui.screens.upload.fragments.UploadDataFragment"
+        android:label="fragment_public_work_send"
+        tools:layout="@layout/fragment_public_work_send" />
 
 
 </navigation>
