--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="transparent">#00000000</color>
-    <color name="colorPrimary">#BDBDBD</color>
+    <color name="colorPrimary">#4F4F4F</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#008577</color>
     <color name="colorWhite">#FFFFFF</color>
