--- a/app/src/main/res/layout/fragment_add_photo.xml
+++ b/app/src/main/res/layout/fragment_add_photo.xml
@@ -77,7 +77,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/materialButton_addPhotoFragment_confirmPhoto"
-                style="@style/MPAppTheme.ButtonBig1"
+                style="@style/MPAppTheme.Button3"
                 android:layout_width="300dp"
                 android:layout_height="@dimen/height_default"
                 android:layout_marginTop="@dimen/margin_xxlarge"
@@ -90,7 +90,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/materialButton_addPhotoFragment_deletePhoto"
-                style="@style/MPAppTheme.ButtonBig3"
+                style="@style/MPAppTheme.Button3"
                 android:layout_width="300dp"
                 android:layout_height="@dimen/height_default"
                 android:layout_marginTop="@dimen/margin_medium"
