--- a/app/src/main/res/layout/fragment_collect_main.xml
+++ b/app/src/main/res/layout/fragment_collect_main.xml
@@ -70,11 +70,10 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton_collectMainFragment_addPhoto"
-            style="@style/MPAppTheme.ButtonBig1"
+            style="@style/MPAppTheme.Button3"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/height_default"
             android:layout_marginBottom="@dimen/margin_default"
-            android:backgroundTint="@color/button1"
             android:text="@string/button_add_photo"
             app:icon="@drawable/ic_camera"
             app:iconGravity="textStart"
@@ -84,7 +83,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton_collectMainFragment_addComment"
-            style="@style/MPAppTheme.ButtonBig1"
+            style="@style/MPAppTheme.Button1"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/height_default"
             android:layout_marginBottom="@dimen/margin_xxlarge"
