--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -77,10 +77,10 @@
                 app:boxBackgroundMode="none"
                 app:endIconMode="password_toggle"
                 app:hintEnabled="false"
+                app:endIconTint="@color/button4"
                 app:layout_constraintEnd_toEndOf="@+id/editText_loginFragment_userInput"
                 app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
-                app:layout_constraintTop_toBottomOf="@+id/textView2"
-                app:passwordToggleTint="@color/password_toggle_tint">
+                app:layout_constraintTop_toBottomOf="@+id/textView2">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText_loginFragment_passwordInput"
@@ -96,7 +96,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/materialButton"
-                style="@style/MPAppTheme.ButtonBig1"
+                style="@style/MPAppTheme.Button1"
                 android:layout_width="300dp"
                 android:layout_height="@dimen/height_default"
                 android:layout_marginTop="@dimen/margin_xxlarge"
@@ -140,7 +140,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_loginFragment_googleSignIn"
-                style="@style/MPAppTheme.ButtonBig2"
+                style="@style/MPAppTheme.Button2"
                 android:layout_width="300dp"
                 android:layout_height="@dimen/height_default"
                 android:layout_marginTop="@dimen/margin_default"
@@ -154,7 +154,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_loginFragment_facebookSignIn"
-                style="@style/MPAppTheme.ButtonBig2"
+                style="@style/MPAppTheme.Button2"
                 android:layout_width="300dp"
                 android:layout_height="@dimen/height_default"
                 android:layout_marginTop="@dimen/margin_default"
@@ -167,7 +167,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_loginFragment_twitterSignIn"
-                style="@style/MPAppTheme.ButtonBig2"
+                style="@style/MPAppTheme.Button2"
                 android:layout_width="300dp"
                 android:layout_height="@dimen/height_default"
                 android:layout_marginTop="@dimen/margin_default"
