--- a/app/src/main/res/layout/fragment_public_work_add.xml
+++ b/app/src/main/res/layout/fragment_public_work_add.xml
@@ -41,15 +41,15 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/materialButton_addPublicWorkFragment_map"
-                    style="@style/MPAppTheme.ButtonSmall1"
+                    style="@style/MPAppTheme.Button4"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/height_default"
                     android:layout_marginTop="@dimen/margin_medium"
-                    android:backgroundTint="@{publicWorkViewModel.locationValid ? @color/buttonValid1 : @color/buttonInvalid1}"
+                    android:backgroundTint="@{publicWorkViewModel.locationValid ? @color/button6 : @color/colorRed}"
                     android:text="@{publicWorkViewModel.locationValid ? @string/button_add_location_valid : @string/button_add_location_invalid}"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@{publicWorkViewModel.locationValid ? @color/colorRed : @color/button6}"
                     app:icon="@drawable/ic_location"
-                    app:iconTint="@color/colorWhite"
+                    app:iconTint="@{publicWorkViewModel.locationValid ? @color/colorRed : @color/button6}"
                     app:layout_constraintEnd_toEndOf="@+id/materialButton_addPublicWorkFragment_add"
                     app:layout_constraintStart_toStartOf="@+id/materialButton_addPublicWorkFragment_cancel"
                     app:layout_constraintTop_toBottomOf="@+id/materialButton_addPublicWorkFragment_cancel" />
@@ -83,6 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/margin_default"
                     android:src="@drawable/ic_chevron_down"
+                    android:tint="@color/colorWhite"
                     app:layout_constraintBottom_toBottomOf="@+id/textView_addPublicWorkFragment_typeOfWork"
                     app:layout_constraintEnd_toEndOf="@+id/textView_addPublicWorkFragment_typeOfWork"
                     app:layout_constraintTop_toTopOf="@+id/textView_addPublicWorkFragment_typeOfWork"
@@ -232,8 +233,8 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/materialButton_addPublicWorkFragment_add"
-                    style="@style/MPAppTheme.ButtonBig1"
-                    android:layout_width="146dp"
+                    style="@style/MPAppTheme.Button1"
+                    android:layout_width="170dp"
                     android:layout_height="@dimen/height_default"
                     android:enabled="@{publicWorkViewModel.isPublicWorkValid}"
                     android:text="@{publicWorkViewModel.isNewPublicWork ? @string/title_public_work_add : @string/title_public_work_edit }"
@@ -245,12 +246,11 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/materialButton_addPublicWorkFragment_cancel"
-                    style="@style/MPAppTheme.ButtonBig2"
-                    android:layout_width="146dp"
+                    style="@style/MPAppTheme.Button2"
+                    android:layout_width="170dp"
                     android:layout_height="@dimen/height_default"
                     android:layout_marginTop="@dimen/margin_xxlarge"
                     android:text="@string/button_cancel"
-                    android:textColor="@color/label1"
                     app:layout_constraintEnd_toStartOf="@+id/materialButton_addPublicWorkFragment_add"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
