--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorRed">#EB5757</color>
     <color name="colorGreen">#008577</color>
     <color name="colorGreenDark">#00574B</color>
+
     <color name="title1">#828282</color>
     <color name="title2">#333333</color>
 
@@ -20,15 +21,19 @@
 
     <color name="buttonFacebookLogin">#3B5998</color>
     <color name="buttonTwitterLogin">#1DA1F2</color>
-
     <color name="button1">#2F80ED</color>
     <color name="button1Disabled">#BDBDBD</color>
     <color name="button2">#E0E0E0</color>
     <color name="button3">#F2F2F2</color>
     <color name="button4">#73FF00</color>
+    <color name="button5">#333333</color>
+    <color name="button6">#4F4F4F</color>
 
     <color name="textButton4">#333333</color>
     <color name="textButton4Disabled">#E0E0E0</color>
+    <color name="textButton5">#F2F2F2</color>
+    <color name="textButton3Enabled">#73FF00</color>
+    <color name="textAddress">#828282</color>
 
     <color name="circleBackground1">#4F4F4F</color>
 
@@ -37,7 +42,7 @@
     <color name="buttonValid1">#2F80ED</color>
     <color name="buttonInvalid1">#EB5757</color>
 
-    <color name="textAddress">#828282</color>
+    <color name="hintColor1">#828282</color>
 
     <color name="backgroundImage1">#E0E0E0</color>
     <color name="backgroundMapHint">#80333333</color>
