--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -17,6 +17,7 @@
     <dimen name="font_xlarge">20sp</dimen>
 
     <dimen name="height_default">48dp</dimen>
+    <dimen name="height_large">56dp</dimen>
 
     <dimen name="button_default">40dp</dimen>
 
